build(task): use Collections.singletonMap for JDK 8 compatibility
Test code uses Map.of() which requires JDK 9+. Switch to Collections.singletonMap
for 1.0.x (JDK 8) compatibility. Higher branches (JDK 17/21) are unaffected.